refactored inventory and order services