@@ -16,9 +16,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,69 +31,29 @@ public class OrderService {
     @Transactional
     public OrderResponseDTO createOrder(OrderRequestDTO request, String authHeader) {
         validateUser(authHeader);
+        validateOrderRequest(request);
 
-        try {
-            validateOrder(request);
-        } catch (IllegalArgumentException e) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
-        }
+        request.getItems().forEach(item -> validateAndReserveProduct(item, request.getCustomerName()));
 
-        for (OrderItemDTO item : request.getItems()) {
-            InventoryRequestDTO inventoryRequest = new InventoryRequestDTO(item.getProductName(), item.getQuantity(), request.getCustomerName());
-            kafkaProducerService.sendMessage("order-events", "CREATE", inventoryRequest);
-
-            ResponseEntity<InventoryResponseDTO> response = orderFeignInterface.reserveProduct(inventoryRequest);
-
-            if (!response.getBody().isAvailable()) {
-                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Недостаточно товара: " + item.getProductName());
-            }
-        }
-
-        Order order = new Order();
-        order.setCustomerName(request.getCustomerName());
-
-        List<OrderItem> items = request.getItems().stream().map(itemDTO -> {
-            OrderItem item = new OrderItem();
-            item.setProductId(itemDTO.getProductId());
-            item.setProductName(itemDTO.getProductName());
-            item.setQuantity(itemDTO.getQuantity());
-            item.setOrder(order);
-            return item;
-        }).collect(Collectors.toList());
-
-        order.setItems(items);
-        orderRepository.save(order);
-        return new OrderResponseDTO(order.getId(), order.getCustomerName(), request.getItems());
+        Order order = saveOrder(request);
+        return toOrderResponseDTO(order);
     }
 
     @Transactional(readOnly = true)
     public OrderResponseDTO getOrder(Long id, String authHeader) {
         validateUser(authHeader);
-
         return orderRepository.findById(id)
-                .map(order -> new OrderResponseDTO(
-                        order.getId(),
-                        order.getCustomerName(),
-                        order.getItems().stream()
-                                .map(item -> new OrderItemDTO(item.getProductId(), item.getProductName(), item.getQuantity()))
-                                .collect(Collectors.toList())
-                ))
+                .map(this::toOrderResponseDTO)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Заказ не найден"));
     }
 
     @Transactional
     public void deleteOrder(Long id, String authHeader) {
         validateUser(authHeader);
-
         Order order = orderRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Заказ не найден"));
 
-        List<InventoryUpdateDTO> updates = order.getItems().stream()
-                .map(item -> new InventoryUpdateDTO(item.getProductId(), item.getQuantity(), 0))
-                .collect(Collectors.toList());
-
-        kafkaProducerService.sendMessage("order-events-update", "DELETE", updates);
-
+        kafkaProducerService.sendMessage("order-events-update", "DELETE", toInventoryUpdateList(order));
         orderRepository.delete(order);
         kafkaProducerService.sendMessage("order-events", "DELETE", "Order ID: " + id);
     }
@@ -102,28 +62,19 @@ public class OrderService {
     @Transactional(readOnly = true)
     public List<OrderResponseDTO> getOrdersByCustomerName(String customerName, String authHeader) {
         checkAdminAccess(authHeader);
-
-        List<Order> orders = orderRepository.findByCustomerName(customerName);
-
-        return orders.stream()
-                .map(order -> new OrderResponseDTO(
-                        order.getId(),
-                        order.getCustomerName(),
-                        order.getItems().stream()
-                                .map(item -> new OrderItemDTO(item.getProductId(), item.getProductName(), item.getQuantity()))
-                                .collect(Collectors.toList())
-                ))
-                .collect(Collectors.toList());
+        return orderRepository.findByCustomerName(customerName).stream()
+                .map(this::toOrderResponseDTO)
+                .toList();
     }
 
     @Transactional
     public OrderResponseDTO updateOrder(Long id, OrderUpdateDTO updateRequest, String authHeader) {
         validateUser(authHeader);
-
         Order order = orderRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Заказ не найден"));
 
         Map<Long, Boolean> stockAvailability = orderFeignInterface.checkStockAvailability(updateRequest.getUpdatedItems());
+        List<InventoryUpdateDTO> inventoryUpdates = new ArrayList<>();
 
         updateRequest.getUpdatedItems().forEach(updateItem -> {
             if (!stockAvailability.getOrDefault(updateItem.getProductId(), false)) {
@@ -144,8 +95,7 @@ public class OrderService {
                 orderItem.setQuantity(newQuantity);
             }
 
-            kafkaProducerService.sendMessage("order-events-update", "UPDATE",
-                    List.of(new InventoryUpdateDTO(updateItem.getProductId(), oldQuantity, newQuantity)));
+            inventoryUpdates.add(new InventoryUpdateDTO(updateItem.getProductId(), oldQuantity, newQuantity));
         });
 
         if (order.getItems().isEmpty()) {
@@ -155,32 +105,74 @@ public class OrderService {
         }
 
         orderRepository.save(order);
+        kafkaProducerService.sendMessage("order-events-update", "UPDATE", inventoryUpdates);
 
-        return new OrderResponseDTO(order.getId(), order.getCustomerName(),
-                order.getItems().stream()
-                        .map(item -> new OrderItemDTO(item.getProductId(), item.getProductName(), item.getQuantity()))
-                        .collect(Collectors.toList()));
+        return toOrderResponseDTO(order);
     }
 
-    private void validateOrder(OrderRequestDTO request) {
+    private OrderResponseDTO toOrderResponseDTO(Order order) {
+        List<OrderItemDTO> items = order.getItems().stream()
+                .map(item -> new OrderItemDTO(item.getProductId(), item.getProductName(), item.getQuantity()))
+                .toList();
+
+        return new OrderResponseDTO(order.getId(), order.getCustomerName(), items);
+    }
+
+    private Order saveOrder(OrderRequestDTO request) {
+        Order order = new Order();
+        order.setCustomerName(request.getCustomerName());
+
+        List<OrderItem> items = request.getItems().stream()
+                .map(itemDTO -> OrderItem.builder()
+                        .productId(itemDTO.getProductId())
+                        .productName(itemDTO.getProductName())
+                        .quantity(itemDTO.getQuantity())
+                        .order(order)
+                        .build())
+                .toList();
+
+        order.setItems(items);
+        return orderRepository.save(order);
+    }
+
+    private void validateAndReserveProduct(OrderItemDTO item, String customerName) {
+        validateOrderItem(item);
+        InventoryRequestDTO inventoryRequest = new InventoryRequestDTO(item.getProductName(), item.getQuantity(), customerName);
+        kafkaProducerService.sendMessage("order-events", "CREATE", inventoryRequest);
+
+        ResponseEntity<InventoryResponseDTO> response = orderFeignInterface.reserveProduct(inventoryRequest);
+        if (!response.getBody().isAvailable()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Недостаточно товара: " + item.getProductName());
+        }
+    }
+
+    private List<InventoryUpdateDTO> toInventoryUpdateList(Order order) {
+        return order.getItems().stream()
+                .map(item -> new InventoryUpdateDTO(item.getProductId(), item.getQuantity(), 0))
+                .toList();
+    }
+
+    private void validateOrderRequest(OrderRequestDTO request) {
         if (request.getCustomerName() == null || request.getCustomerName().isBlank()) {
-            throw new IllegalArgumentException("Имя пользователя не может быть пустым");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Имя пользователя не может быть пустым");
         }
 
         if (request.getItems() == null || request.getItems().isEmpty()) {
-            throw new IllegalArgumentException("Список товаров не может быть пустым");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Список товаров не может быть пустым");
         }
 
-        for (OrderItemDTO item : request.getItems()) {
-            if (item.getProductId() == null || item.getProductId() <= 0) {
-                throw new IllegalArgumentException("Некорректный ID товара: " + item.getProductId());
-            }
-            if (item.getProductName() == null || item.getProductName().isBlank()) {
-                throw new IllegalArgumentException("Название товара не может быть пустым");
-            }
-            if (item.getQuantity() <= 0) {
-                throw new IllegalArgumentException("Количество товара должно быть больше 0");
-            }
+        request.getItems().forEach(this::validateOrderItem);
+    }
+
+    private void validateOrderItem(OrderItemDTO item) {
+        if (item.getProductId() == null || item.getProductId() <= 0) {
+            throw new IllegalArgumentException("Некорректный ID товара: " + item.getProductId());
+        }
+        if (item.getProductName() == null || item.getProductName().isBlank()) {
+            throw new IllegalArgumentException("Название товара не может быть пустым");
+        }
+        if (item.getQuantity() <= 0) {
+            throw new IllegalArgumentException("Количество товара должно быть больше 0");
         }
     }
 
